--- a/diffanalysis.html
+++ b/diffanalysis.html
@@ -17,6 +17,7 @@
   <script src="https://cdn.jsdelivr.net/npm/muse-ui-toast@0.3.0/dist/muse-ui-toast.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/muse-ui-loading@0.2.0/dist/muse-ui-loading.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/muse-ui-progress@0.1.0/dist/muse-ui-progress.min.js"></script>
+  <title>稳音绫的工具站 - BanGDream自制谱师工具合集</title>
 </head>
 
 <body>
