--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="https://cdn.jsdelivr.net/npm/muse-ui-loading@0.2.0/dist/muse-ui-loading.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/muse-ui-progress@0.1.0/dist/muse-ui-progress.min.js"></script>
   <script src="http://coppercomplex.gitee.io/kirapacks-page/songlist.js"></script>
+  <title>稳音绫的工具站 - BanGDream自制谱师工具合集</title>
 </head>
 
 <body>
@@ -34,7 +35,7 @@
     <div id="nav">
       <mu-container>
         <mu-bottom-nav :value="0" @change="changed">
-          <mu-bottom-nav-item title="主页" icon="home" :value="0"></mu-bottom-nav-item>
+          <!--mu-bottom-nav-item title="主页" icon="home" :value="0"></mu-bottom-nav-item-->
           <mu-bottom-nav-item title="谱面推荐" icon="grade" :value="1"></mu-bottom-nav-item>
           <mu-bottom-nav-item title="谱面分析" icon="assignment" :value="2"></mu-bottom-nav-item>
           <mu-bottom-nav-item title="BD分析" icon="find_in_page" :value="3"></mu-bottom-nav-item>
